[package]
name = "bevy_device_lang"
version = "0.5.0"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_device_lang"
repository = "https://github.com/rustunit/bevy_device_lang"
keywords = ["bevy", "gamedev", "mobile", "crossplatform"]
description = "Crossplatform way to query device language setting"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2 = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = ["Navigator", "Window"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Globalization",
    "Win32_System_SystemServices",
] }
